[gd_scene load_steps=13 format=3 uid="uid://c3ccrpeska432"]

[ext_resource type="Script" path="res://Levels/main.gd" id="1_2bifh"]
[ext_resource type="Script" path="res://UI/UI.gd" id="3_1s8rs"]
[ext_resource type="Texture2D" uid="uid://beybofb4mggvs" path="res://Assets/spellbook.png" id="3_80hdh"]
[ext_resource type="Theme" uid="uid://nnjsyjl2ingj" path="res://Themes/player_ui.tres" id="3_ibsr8"]
[ext_resource type="PackedScene" uid="uid://c5783ti8g731p" path="res://UI/attack_details.tscn" id="3_rdh00"]
[ext_resource type="PackedScene" uid="uid://c0dy88gwgp6cu" path="res://UI/mon_ui.tscn" id="4_4psda"]
[ext_resource type="Texture2D" uid="uid://pa8bxdyl7kd1" path="res://Assets/temp_stage.png" id="4_g5kj7"]
[ext_resource type="Texture2D" uid="uid://d3276ue5ykter" path="res://Assets/type_chart.png" id="4_ujev1"]
[ext_resource type="Texture2D" uid="uid://cnkle2uwok0xu" path="res://Assets/Backgrounds/dark_forest.png" id="5_skoyj"]
[ext_resource type="Texture2D" uid="uid://xt3wv43400y4" path="res://Assets/enemy_health_bar.png" id="5_xdxbd"]
[ext_resource type="AudioStream" uid="uid://peoy0akqoaqi" path="res://Assets/Audio/click.wav" id="8_4uffq"]
[ext_resource type="AudioStream" uid="uid://cb4qodw1vc2pd" path="res://Assets/Audio/footsteps.mp3" id="10_wlmlo"]

[node name="Main" type="Node2D"]
script = ExtResource("1_2bifh")
command_delay = 0.8

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
script = ExtResource("3_1s8rs")

[node name="Spellbook" type="Sprite2D" parent="UI"]
position = Vector2(970, 516)
scale = Vector2(0.702733, 0.668056)
texture = ExtResource("3_80hdh")

[node name="EndButton" type="Button" parent="UI"]
visible = false
z_index = 1
layout_mode = 0
offset_left = 864.0
offset_top = 345.0
offset_right = 1077.0
offset_bottom = 393.0
text = "Go to end screen"

[node name="AttackButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 677.0
offset_top = 418.0
offset_right = 784.0
offset_bottom = 462.0
theme = ExtResource("3_ibsr8")
text = "Attack!"

[node name="ItemButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 677.0
offset_top = 476.0
offset_right = 784.0
offset_bottom = 520.0
theme = ExtResource("3_ibsr8")
text = "Spell"

[node name="CatchButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 677.0
offset_top = 531.0
offset_right = 784.0
offset_bottom = 575.0
theme = ExtResource("3_ibsr8")
text = "Catch"

[node name="RunButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 677.0
offset_top = 588.0
offset_right = 784.0
offset_bottom = 632.0
theme = ExtResource("3_ibsr8")
text = "Run!"

[node name="PlayerMoveList" type="Control" parent="UI"]
visible = false
anchors_preset = 0
offset_left = 836.0
offset_top = 437.0
offset_right = 965.0
offset_bottom = 565.0

[node name="Move0" type="Button" parent="UI/PlayerMoveList"]
layout_mode = 0
offset_right = 124.0
offset_bottom = 31.0
text = "Move 0"

[node name="Move1" type="Button" parent="UI/PlayerMoveList"]
layout_mode = 0
offset_top = 31.0
offset_right = 124.0
offset_bottom = 62.0
text = "Move 1"

[node name="Move2" type="Button" parent="UI/PlayerMoveList"]
layout_mode = 0
offset_top = 62.0
offset_right = 124.0
offset_bottom = 93.0
text = "Move 2"

[node name="Move3" type="Button" parent="UI/PlayerMoveList"]
layout_mode = 0
offset_top = 93.0
offset_right = 124.0
offset_bottom = 124.0
text = "Move 3"

[node name="PlayerItemList" type="Control" parent="UI"]
visible = false
anchors_preset = 0
offset_left = 838.0
offset_top = 421.0
offset_right = 878.0
offset_bottom = 461.0

[node name="PotionButton" type="Button" parent="UI/PlayerItemList"]
layout_mode = 0
offset_top = 2.0
offset_right = 124.0
offset_bottom = 33.0
text = "Heal"

[node name="SwapButton" type="Button" parent="UI/PlayerItemList"]
layout_mode = 0
offset_top = 33.0
offset_right = 124.0
offset_bottom = 64.0
text = "Fast Swap"

[node name="SuperCatchButton" type="Button" parent="UI/PlayerItemList"]
layout_mode = 0
offset_top = 64.0
offset_right = 124.0
offset_bottom = 95.0
text = "Super Catch"

[node name="SmokebombButton" type="Button" parent="UI/PlayerItemList"]
layout_mode = 0
offset_top = 95.0
offset_right = 124.0
offset_bottom = 126.0
text = "Smokebomb"

[node name="ThirdEyeButton" type="Button" parent="UI/PlayerItemList"]
layout_mode = 0
offset_top = 126.0
offset_right = 124.0
offset_bottom = 157.0
text = "Third Eye"

[node name="PlayerMoveDetails" type="Control" parent="UI"]
anchors_preset = 0
offset_left = 976.0
offset_top = 423.0
offset_right = 1176.0
offset_bottom = 643.0

[node name="PlayerAttackDetails0" parent="UI/PlayerMoveDetails" instance=ExtResource("3_rdh00")]
visible = false
offset_right = 0.0
offset_bottom = 0.0

[node name="PlayerAttackDetails1" parent="UI/PlayerMoveDetails" instance=ExtResource("3_rdh00")]
visible = false
offset_right = 0.0
offset_bottom = 0.0

[node name="PlayerAttackDetails2" parent="UI/PlayerMoveDetails" instance=ExtResource("3_rdh00")]
visible = false
offset_right = 0.0
offset_bottom = 0.0

[node name="PlayerAttackDetails3" parent="UI/PlayerMoveDetails" instance=ExtResource("3_rdh00")]
visible = false
offset_right = 0.0
offset_bottom = 0.0

[node name="EnemyMoveList" type="ItemList" parent="UI"]
layout_mode = 0
offset_left = 1017.0
offset_top = 120.0
offset_right = 1145.0
offset_bottom = 237.0
item_count = 4
item_0/text = "attack"
item_1/text = "attack"
item_2/text = "attack"
item_3/text = "attack"

[node name="SwitchButton0" type="Button" parent="UI"]
layout_mode = 0
offset_left = 58.0
offset_top = 494.0
offset_right = 263.0
offset_bottom = 630.0
disabled = true
text = "Switch 1"
expand_icon = true

[node name="SwitchButton1" type="Button" parent="UI"]
layout_mode = 0
offset_left = 263.0
offset_top = 494.0
offset_right = 468.0
offset_bottom = 630.0
disabled = true
text = "Switch 2"
expand_icon = true

[node name="Sideboard" type="Button" parent="UI"]
layout_mode = 0
offset_left = 494.0
offset_top = 494.0
offset_right = 630.0
offset_bottom = 630.0
disabled = true
expand_icon = true

[node name="CatchCount" type="RichTextLabel" parent="UI"]
layout_mode = 0
offset_left = 665.0
offset_top = 382.0
offset_right = 850.0
offset_bottom = 409.0
text = "Catch count: 999"

[node name="CatchChance" type="RichTextLabel" parent="UI"]
visible = false
layout_mode = 0
offset_left = 595.0
offset_top = 94.0
offset_right = 758.0
offset_bottom = 130.0
text = "Catch chance: 100%"

[node name="Reset" type="Button" parent="UI"]
visible = false
layout_mode = 0
offset_left = 19.0
offset_top = 14.0
offset_right = 70.0
offset_bottom = 45.0
text = "Reset"

[node name="CombatLog" type="RichTextLabel" parent="UI"]
layout_mode = 0
offset_left = 23.0
offset_top = 18.0
offset_right = 316.0
offset_bottom = 213.0
text = "FIGHT!"
scroll_following = true

[node name="PlayerMonUI" parent="UI" instance=ExtResource("4_4psda")]
offset_left = 428.0
offset_top = 324.0
offset_right = 428.0
offset_bottom = 324.0

[node name="EnemyMonUI" parent="UI" instance=ExtResource("4_4psda")]
offset_left = 533.0
offset_top = 93.0
offset_right = 533.0
offset_bottom = 93.0

[node name="HPBar" parent="UI/EnemyMonUI" index="4"]
texture_progress = ExtResource("5_xdxbd")

[node name="TypeMatchupButton" type="Button" parent="UI"]
layout_mode = 0
offset_left = 382.0
offset_top = 18.0
offset_right = 508.0
offset_bottom = 49.0
text = "Type Matchups"

[node name="TypeMatchupChart" type="Sprite2D" parent="UI"]
visible = false
position = Vector2(443, 168)
scale = Vector2(0.336923, 0.336923)
texture = ExtResource("4_ujev1")

[node name="ClickSound" type="AudioStreamPlayer2D" parent="UI"]
stream = ExtResource("8_4uffq")

[node name="PlayerMonLocation" type="Marker2D" parent="."]
z_index = 5
position = Vector2(268, 452)

[node name="ResolveTurnTimer" type="Timer" parent="."]
wait_time = 0.065
one_shot = true

[node name="EnemyMonLocation" type="Marker2D" parent="."]
z_index = 5
position = Vector2(879, 296)

[node name="PlayerStage" type="Sprite2D" parent="."]
position = Vector2(267, 455)
scale = Vector2(0.335897, 0.335897)
texture = ExtResource("4_g5kj7")

[node name="EnemyStage" type="Sprite2D" parent="."]
position = Vector2(879, 298)
scale = Vector2(0.335897, 0.335897)
texture = ExtResource("4_g5kj7")

[node name="DarkForestBG" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(635.111, 272)
scale = Vector2(0.711111, 0.711111)
texture = ExtResource("5_skoyj")
metadata/_edit_lock_ = true

[node name="RunAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_wlmlo")

[node name="AudioDelay" type="Timer" parent="."]
wait_time = 0.2

[connection signal="pressed" from="UI/EndButton" to="." method="_on_end_button_pressed"]
[connection signal="pressed" from="UI/AttackButton" to="." method="_on_attack_button_pressed"]
[connection signal="pressed" from="UI/ItemButton" to="UI" method="_on_item_button_pressed"]
[connection signal="pressed" from="UI/CatchButton" to="." method="_on_catch_button_pressed"]
[connection signal="pressed" from="UI/RunButton" to="." method="_on_run_button_pressed"]
[connection signal="mouse_entered" from="UI/PlayerMoveList/Move0" to="UI" method="_on_move_0_mouse_entered"]
[connection signal="pressed" from="UI/PlayerMoveList/Move0" to="." method="_on_move_0_pressed"]
[connection signal="mouse_entered" from="UI/PlayerMoveList/Move1" to="UI" method="_on_move_1_mouse_entered"]
[connection signal="pressed" from="UI/PlayerMoveList/Move1" to="." method="_on_move_1_pressed"]
[connection signal="mouse_entered" from="UI/PlayerMoveList/Move2" to="UI" method="_on_move_2_mouse_entered"]
[connection signal="pressed" from="UI/PlayerMoveList/Move2" to="." method="_on_move_2_pressed"]
[connection signal="mouse_entered" from="UI/PlayerMoveList/Move3" to="UI" method="_on_move_3_mouse_entered"]
[connection signal="pressed" from="UI/PlayerMoveList/Move3" to="." method="_on_move_3_pressed"]
[connection signal="pressed" from="UI/PlayerItemList/PotionButton" to="." method="_on_potion_button_pressed"]
[connection signal="pressed" from="UI/SwitchButton0" to="." method="_on_switch_button_0_pressed"]
[connection signal="pressed" from="UI/SwitchButton0" to="UI" method="_on_switch_button_0_pressed"]
[connection signal="pressed" from="UI/SwitchButton1" to="." method="_on_switch_button_1_pressed"]
[connection signal="pressed" from="UI/SwitchButton1" to="UI" method="_on_switch_button_1_pressed"]
[connection signal="pressed" from="UI/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="UI/TypeMatchupButton" to="UI" method="_on_type_matchup_button_pressed"]
[connection signal="timeout" from="ResolveTurnTimer" to="." method="_on_resolve_turn_timer_timeout"]

[editable path="UI/EnemyMonUI"]
